Version 1.0.17:
- Update gnulib to 2009-03-02.
- Fix an invalid memory access in pop3_retr().
- Document that maildir delivery requires a file system that supports hard 
  links.
- Use more gnulib modules to remove more W32 workarounds from the source.
- Add missing gnulib module strerror for meaningful error messages on W32.

Version 1.0.16:
- Remove most W32-specific code from net.c and use the appropriate gnulib
  modules instead.
- Gnulib upate to 2008-12-24.
- Added a vim syntax file for mpoprc files to scripts/vim. The file was
  originally written by Simon Ruderich for msmtp. Thanks!
- Unified handling of the Gnome and MacOS keyrings. Both are disabled by default
  and must be enabled using --with-*-keyring options.
- From msmtp: Support for SYSCONFDIR/netrc (as a fallback for ~/.netrc) was
  added by Jim Pryor. Thanks!
- Added support for the GNOME Keyring. Originally written by Satoru SATOH for
  msmtp. Thanks a lot!

Version 1.0.15:
- Fix retrieval of mails that have no body.
- Do not allow comments in UIDLs files after the first non-comment line, to
  prevent UIDs starting with '#' from being treated as comments. Bug reported
  by Robert Siemer.

Version 1.0.14:
- Added the new tls_crl_file configuration command and the corresponding
  --tls-crl-file option.
- Added the new tls_min_dh_prime_bits configuration command and the
  corresponding --tls-min-dh-prime-bits option.
- Added the new tls_priorities configuration command and the corresponding
  --tls-priorities option.
- Gnulib upate to 2008-06-02. Use getpass-gnu instead of getpass module.
- Document how to use 'killsize 0' and 'keep on' to synchronize the UID list
  of the client to the UID list of the server. Suggested by Dimitrios Apostolou.
  Thanks!
- Use uidls_uidcmp() as a comparison function for qsort() and bsearch().
  Eliminate a duplicate function in pop3.c. Suggested by Dimitrios Apostolou.
  Thanks!
- Call fsync() after writing the UIDLS file. Suggested by Dimitrios Apostolou.
  Thanks!