@@ -1,4 +1,5 @@
 Version 1.0.17:
+- Improve test for non-existing UIDLS file.
 - Update gnulib to 2009-03-02.
 - Fix an invalid memory access in pop3_retr().
 - Document that maildir delivery requires a file system that supports hard 
